@@ -1,0 +1,20 @@
+---
+auto_fieldset: 1
+
+elements:
+  - type: Hidden
+    name: id
+  
+  - type: Text
+    name: name
+  
+  - type: Select
+    name: bands
+    multiple: 1
+    model_config:
+      model: Bands
+      condition:
+        manager: 1
+  
+  - type: Submit
+    name: submit
